Version 0.2.0
  * 10% faster fastdigamma/vfastdigamma (same formula with terms rearranged)

Version 0.1.0
  * Inverse erf
  * Trade some overall log accuracy to improve accuracy on exact powers of 2
  * Whoops, left out power 

Version 0.0.0
  * Fast logarithm, exponential.
  * Fast trigonometrics and hyperbolics.
  * Fast sigmoid and erf.