@@ -1,5 +1,6 @@
 Version 0.2.0
   * 10% faster fastdigamma/vfastdigamma (same formula with terms rearranged)
+  * handle underflow in fastexp (25% speed penalty, but ubiqituous so necessary)
 
 Version 0.1.0
   * Inverse erf
